--- a/Zipssa/app/src/main/res/layout/alarm_time_item.xml
+++ b/Zipssa/app/src/main/res/layout/alarm_time_item.xml
@@ -9,7 +9,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/daylight_210"
-		android:textSize="@dimen/add_alarm_text_mid"
+		android:textSize="@dimen/alarm_page_time_text"
 		android:textColor="@color/text_color"
-		android:paddingVertical="7dp"/>
+		android:paddingVertical="@dimen/alarm_page_time_paddingV"
+		android:text="오전 1:00"/>
 </LinearLayout>
