--- a/Zipssa/app/src/main/res/layout/main_item_time_item.xml
+++ b/Zipssa/app/src/main/res/layout/main_item_time_item.xml
@@ -10,7 +10,7 @@
 		android:layout_height="wrap_content"
 		android:gravity="center"
 		android:fontFamily="@font/daylight_210"
-		android:textSize="@dimen/main_item_time"
+		android:textSize="@dimen/main_item_time_text"
 		android:textColor="@color/text_color"
 		android:text="am 9:00" />
 </LinearLayout>
