--- a/Zipssa/app/src/main/res/layout/popup_alert.xml
+++ b/Zipssa/app/src/main/res/layout/popup_alert.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="250dp"
+	android:layout_width="@dimen/popup_sizeH"
 	android:layout_height="wrap_content"
 	android:orientation="vertical"
 	android:background="@drawable/popup_alert"
-	android:padding="@dimen/popup_outline"
+	android:padding="@dimen/popup_padding"
 	android:gravity="center">
 
 	<TextView
@@ -12,22 +12,24 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/bmjua"
-		android:textSize="@dimen/popup_text"
-		android:textColor="@color/text_color" />
+		android:textSize="@dimen/popup_content_text"
+		android:textColor="@color/text_color"
+		android:text="Title"/>
 
 	<TextView
 		android:id="@+id/popup_content"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/daylight_210"
-		android:padding="@dimen/popup_inline"
-		android:textSize="@dimen/popup_text"
-		android:textColor="@color/text_color" />
+		android:padding="@dimen/popup_content_padding"
+		android:textSize="@dimen/popup_content_text"
+		android:textColor="@color/text_color"
+		android:text="Content"/>
 
 	<View
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/split_line"
-		android:layout_marginTop="@dimen/popup_inline"
+		android:layout_marginTop="@dimen/popup_button_marginT"
 		android:background="@color/split_line"/>
 
 	<LinearLayout
@@ -40,10 +42,10 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
-			android:padding="@dimen/popup_inline"
+			android:padding="@dimen/popup_button_padding"
 			android:gravity="center"
 			android:fontFamily="@font/daylight_210"
-			android:textSize="@dimen/popup_text"
+			android:textSize="@dimen/popup_button_text"
 			android:textColor="@color/text_color"/>
 
 		<View
@@ -56,10 +58,10 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
-			android:padding="@dimen/popup_inline"
+			android:padding="@dimen/popup_button_padding"
 			android:gravity="center"
 			android:fontFamily="@font/daylight_210"
-			android:textSize="@dimen/popup_text"
+			android:textSize="@dimen/popup_button_text"
 			android:textColor="@color/text_color"
 			android:text="취소"/>
 	</LinearLayout>
