--- a/Zipssa/app/src/main/res/layout/add_label_popup.xml
+++ b/Zipssa/app/src/main/res/layout/add_label_popup.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="250dp"
+	android:layout_width="@dimen/popup_sizeH"
 	android:layout_height="wrap_content"
-	android:padding="@dimen/add_alarm_text_hinside_mid"
+	android:padding="@dimen/add_label_padding"
 	android:background="#FFFFFF"
 	android:orientation="vertical" >
 
@@ -10,14 +10,14 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
-		android:paddingHorizontal="@dimen/add_alarm_text_hinside_small">
+		android:paddingHorizontal="@dimen/add_label_title_padding">
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:fontFamily="@font/daylight_210"
 			android:textColor="@color/text_color"
-			android:textSize="@dimen/add_alarm_text_mid"
+			android:textSize="@dimen/add_label_text"
 			android:text="증상 이름 : "/>
 
 		<EditText
@@ -26,7 +26,7 @@
 			android:layout_height="wrap_content"
 			android:fontFamily="@font/daylight_210"
 			android:textColor="@color/text_color"
-			android:textSize="@dimen/add_alarm_text_mid" />
+			android:textSize="@dimen/add_label_text" />
 	</LinearLayout>
 
 	<LinearLayout
@@ -42,42 +42,42 @@
 
 			<RadioButton
 				android:id="@+id/label_1"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_2"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_3"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_4"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_5"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 		</LinearLayout>
 
@@ -89,42 +89,42 @@
 
 			<RadioButton
 				android:id="@+id/label_6"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_7"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_8"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_9"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_10"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 		</LinearLayout>
 
@@ -136,42 +136,42 @@
 
 			<RadioButton
 				android:id="@+id/label_11"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_12"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_13"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_14"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 
 			<RadioButton
 				android:id="@+id/label_15"
-				android:layout_width="@dimen/label_item"
-				android:layout_height="@dimen/label_item"
+				android:layout_width="@dimen/add_label_item_size"
+				android:layout_height="@dimen/add_label_item_size"
 				android:background="@drawable/add_label_selector"
-				android:layout_margin="@dimen/label_item_margin"
+				android:layout_margin="@dimen/add_item_margin"
 				android:button="@drawable/empty_selector"/>
 		</LinearLayout>
 		
@@ -180,13 +180,13 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="@drawable/add_label_btn"
-			android:layout_marginTop="@dimen/add_alarm_text_vinside"
-			android:paddingHorizontal="@dimen/add_alarm_text_hinside_small"
-			android:paddingVertical="@dimen/add_alarm_text_vinside_close"
+			android:layout_marginTop="@dimen/add_label_button_marginT"
+			android:paddingHorizontal="@dimen/add_label_button_paddingH"
+			android:paddingVertical="@dimen/add_label_button_paddingV"
 			android:layout_gravity="center"
 			android:fontFamily="@font/daylight_210"
 			android:textColor="@color/text_color"
-			android:textSize="@dimen/add_alarm_text_mid"
+			android:textSize="@dimen/add_label_text"
 			android:text="추가" />
 	</LinearLayout>
 </LinearLayout>
