--- a/Zipssa/app/src/main/res/layout/main_item_check.xml
+++ b/Zipssa/app/src/main/res/layout/main_item_check.xml
@@ -6,8 +6,8 @@
 
 	<CheckBox
 		android:id="@+id/main_check"
-		android:layout_width="20dp"
-		android:layout_height="20dp"
+		android:layout_width="@dimen/main_item_check_size"
+		android:layout_height="@dimen/main_item_check_size"
 		android:background="@drawable/main_check_selector"
 		android:button="@drawable/empty_selector"
 		android:enabled="false" />
