--- a/Zipssa/app/src/main/res/layout/main_list_fragment.xml
+++ b/Zipssa/app/src/main/res/layout/main_list_fragment.xml
@@ -17,7 +17,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
 			android:src="@drawable/main_logo"
-			android:layout_margin="10dp"/>
+			android:layout_margin="@dimen/main_logo_margin"/>
 	</LinearLayout>
 
 	<LinearLayout
@@ -30,7 +30,7 @@
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			android:layout_gravity="top|center"
-			android:layout_margin="@dimen/main_distance_mid">
+			android:layout_marginVertical="@dimen/main_title_marginV">
 
 			<TextView
 				android:id="@+id/main_name"
@@ -39,7 +39,7 @@
 				android:fontFamily="@font/bmjua"
 				android:text="약타미"
 				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_text_large" />
+				android:textSize="@dimen/main_title_text" />
 
 			<TextView
 				android:layout_width="wrap_content"
@@ -47,27 +47,27 @@
 				android:fontFamily="@font/bmjua"
 				android:text=" 님의 리스트"
 				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_text_mid" />
+				android:textSize="@dimen/main_subtitle_text" />
 		</LinearLayout>
 
 		<View
 			android:layout_width="match_parent"
 			android:layout_height="@dimen/split_line"
 			android:background="@color/split_line"
-			android:layout_marginHorizontal="@dimen/main_distance_large"/>
+			android:layout_marginHorizontal="@dimen/main_split_marginH"/>
 
 		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			android:layout_gravity="top|center"
-			android:layout_margin="@dimen/main_distance_mid">
+			android:layout_marginVertical="@dimen/main_date_marginV">
 
 			<ImageView
 				android:id="@+id/main_date_before"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:layout_marginVertical="@dimen/main_distance_small"
+				android:layout_marginVertical="@dimen/main_date_arrow_marginV"
 				android:adjustViewBounds="true"
 				android:src="@drawable/arrow_left" />
 
@@ -75,17 +75,17 @@
 				android:id="@+id/main_date"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_marginHorizontal="10dp"
+				android:layout_marginHorizontal="@dimen/main_date_marginV"
 				android:fontFamily="@font/bmjua"
 				android:text="0000 / 00 / 00"
 				android:textColor="@color/text_color"
-				android:textSize="@dimen/main_text_large" />
+				android:textSize="@dimen/main_date_text" />
 
 			<ImageView
 				android:id="@+id/main_date_next"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:layout_marginVertical="@dimen/main_distance_small"
+				android:layout_marginVertical="@dimen/main_date_arrow_marginV"
 				android:adjustViewBounds="true"
 				android:src="@drawable/arrow_right" />
 		</LinearLayout>
