--- a/Zipssa/app/src/main/res/values/dimens.xml
+++ b/Zipssa/app/src/main/res/values/dimens.xml
@@ -1,49 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!--  Layout size with 'dp'  -->
-	<dimen name="add_alarm_houtside">30dp</dimen>
-	<dimen name="add_alarm_voutside">30dp</dimen>
-	<dimen name="add_alarm_text_hinside_small">15dp</dimen>
-	<dimen name="add_alarm_text_hinside_mid">20dp</dimen>
-	<dimen name="add_alarm_text_hinside_large">25dp</dimen>
-	<dimen name="add_alarm_text_vinside">10dp</dimen>
-	<dimen name="add_alarm_text_vinside_close">5dp</dimen>
-	<dimen name="main_name_top">30dp</dimen>
-	<dimen name="main_name_side">10dp</dimen>
-	<dimen name="main_side">30dp</dimen>
-	<dimen name="main_distance_xlarge">30dp</dimen>
-	<dimen name="main_distance_large">20dp</dimen>
-	<dimen name="main_distance_mid">10dp</dimen>
-	<dimen name="main_distance_small">5dp</dimen>
-	<dimen name="main_distance_xsmall">2dp</dimen>
-	<dimen name="main_remain_time_distance">3dp</dimen>
-	<dimen name="shadow_size">3dp</dimen>
+
+	<!-- all activities -->
 	<dimen name="split_line">1dp</dimen>
-	<dimen name="bottom_bar">60dp</dimen>
-	<dimen name="label_item">20dp</dimen>
-	<dimen name="label_item_margin">7dp</dimen>
+	<dimen name="shadow_size">3dp</dimen>
+	<dimen name="popup_sizeH">250dp</dimen>
 
+	<!-- alarm information -->
+	<dimen name="alarm_page_back_size">20dp</dimen>
+	<dimen name="alarm_page_back_marginH">15dp</dimen>
 
-	<!--  Text size with 'sp'  -->
-	<dimen name="add_alarm_text_large">20sp</dimen>
-	<dimen name="add_alarm_text_mid">15sp</dimen>
-	<dimen name="add_alarm_text_small">10sp</dimen>
-	<dimen name="main_name">30sp</dimen>
-	<dimen name="main_text_large">20sp</dimen>
-	<dimen name="main_text_mid">15sp</dimen>
-	<dimen name="main_text_small">10sp</dimen>
-	<dimen name="main_remain_title">12sp</dimen>
-	<dimen name="bottom_bar_text">13sp</dimen>
-	<dimen name="main_popup_text">13sp</dimen>
+	<dimen name="alarm_page_contentbox_sizeH">20dp</dimen>
+	<dimen name="alarm_page_contentbox_paddingH">10dp</dimen>
 
-	<!-- Popup alert window-->
-	<dimen name="popup_outline">10dp</dimen>
-	<dimen name="popup_inline">5dp</dimen>
-	<dimen name="popup_text">15sp</dimen>
+	<dimen name="alarm_page_name_marginT">30dp</dimen>
+	<dimen name="alarm_page_name_marginH">15dp</dimen>
+	<dimen name="alarm_page_name_marginB">5dp</dimen>
 
-	<!--  Text size with 'dp'  -->
-	<dimen name="add_alarm_label_text">11dp</dimen>
-	<dimen name="alarm_switch">8dp</dimen>
-	<dimen name="main_item_time">8dp</dimen>
-	<dimen name="main_item_date">15dp</dimen>
+	<dimen name="alarm_page_box_paddingH">15dp</dimen>
+	<dimen name="alarm_page_box_paddingV">10dp</dimen>
+
+	<dimen name="alarm_page_content_marginH">20dp</dimen>
+	<dimen name="alarm_page_content_paddingV">10dp</dimen>
+	<dimen name="alarm_page_content_distanceV">5dp</dimen>
+	<dimen name="alarm_page_content_distanceVL">10dp</dimen>
+	<dimen name="alarm_page_content_distanceH">5dp</dimen>
+
+	<dimen name="alarm_page_count_paddingV">5dp</dimen>
+	<dimen name="alarm_page_time_paddingV">7dp</dimen>
+
+	<dimen name="alarm_page_split_marginH">15dp</dimen>
+
+	<dimen name="alarm_page_repeats_marginH">25dp</dimen>
+	<dimen name="alarm_page_repeats_margin">5dp</dimen>
+
+	<dimen name="alarm_page_button_marginV">30dp</dimen>
+	<dimen name="alarm_page_confirm_paddingH">60dp</dimen>
+	<dimen name="alarm_page_button_distanceH">20dp</dimen>
+	<dimen name="alarm_page_button_paddingV">20dp</dimen>
+
+	<dimen name="alarm_page_title_text">20sp</dimen>
+	<dimen name="alarm_page_name_text">15sp</dimen>
+	<dimen name="alarm_page_content_text">10sp</dimen>
+	<dimen name="alarm_page_button_text">15sp</dimen>
+	<dimen name="alarm_page_time_text">15sp</dimen>
+
+	<!-- alarm label item -->
+	<dimen name="label_paddingV">10dp</dimen>
+	<dimen name="label_marginH">5dp</dimen>
+
+	<dimen name="add_label_padding">20dp</dimen>
+	<dimen name="add_label_title_padding">20dp</dimen>
+	<dimen name="add_label_item_size">20dp</dimen>
+	<dimen name="add_item_margin">7dp</dimen>
+	<dimen name="add_label_button_marginT">10dp</dimen>
+	<dimen name="add_label_button_paddingH">15dp</dimen>
+	<dimen name="add_label_button_paddingV">5dp</dimen>
+
+	<dimen name="label_text">11dp</dimen>
+	<dimen name="add_label_text">15sp</dimen>
+
+	<!--  main page  -->
+	<dimen name="main_bottom_bar_sizeH">60dp</dimen>
+	<dimen name="main_bottom_bar_marginT">10dp</dimen>
+	<dimen name="main_bottom_bar_marginB">5dp</dimen>
+	<dimen name="main_bottom_bar_text_marginT">2dp</dimen>
+	<dimen name="main_bottom_bar_split_marginV">5dp</dimen>
+
+	<dimen name="main_bottom_bar_text">13sp</dimen>
+
+	<!--  main list  -->
+	<dimen name="main_logo_margin">10dp</dimen>
+	<dimen name="main_title_marginV">10dp</dimen>
+	<dimen name="main_split_marginH">20dp</dimen>
+	<dimen name="main_date_marginV">10dp</dimen>
+	<dimen name="main_date_arrow_marginV">5dp</dimen>
+
+	<dimen name="main_title_text">20sp</dimen>
+	<dimen name="main_subtitle_text">15sp</dimen>
+	<dimen name="main_date_text">15dp</dimen>
+
+	<!--  main list item  -->
+	<dimen name="main_item_remain_sizeH">110dp</dimen>
+
+	<dimen name="main_item_paddingV">10dp</dimen>
+	<dimen name="main_item_paddingH">30dp</dimen>
+	<dimen name="main_item_split_marginH">10dp</dimen>
+	<dimen name="main_item_remain_paddingV">5dp</dimen>
+	<dimen name="main_item_times_paddingB">10dp</dimen>
+	<dimen name="main_item_title_paddingV">5dp</dimen>
+	<dimen name="main_item_title_paddingH">10dp</dimen>
+	<dimen name="main_item_title_marginH">20dp</dimen>
+
+	<dimen name="main_item_icon_size">60dp</dimen>
+	<dimen name="main_item_icon_marginH">25dp</dimen>
+	<dimen name="main_item_icon_paddingB">10dp</dimen>
+
+	<dimen name="main_item_switch_sizeH">40dp</dimen>
+	<dimen name="main_item_switch_sizeV">20dp</dimen>
+	<dimen name="main_item_switch_marginV">3dp</dimen>
+	<dimen name="main_item_switch_marginR">30dp</dimen>
+
+	<dimen name="main_item_content_circle">5dp</dimen>
+
+	<dimen name="main_item_content_distanceV">5dp</dimen>
+	<dimen name="main_item_content_distanceVL">10dp</dimen>
+	<dimen name="main_item_content_distanceH">10dp</dimen>
+	<dimen name="main_item_check_size">20dp</dimen>
+
+	<dimen name="main_item_remain_text">15sp</dimen>
+	<dimen name="main_item_title_text">15sp</dimen>
+	<dimen name="main_item_content_text">15sp</dimen>
+	<dimen name="main_item_switch_text">8dp</dimen>
+	<dimen name="main_item_date_text">8dp</dimen>
+	<dimen name="main_item_time_text">8dp</dimen>
+
+	<!--  main remain time  -->
+	<dimen name="main_remain_paddingV">10dp</dimen>
+	<dimen name="main_remain_paddingH">30dp</dimen>
+	<dimen name="main_remain_box_paddingV">5dp</dimen>
+	<dimen name="main_remain_content_paddingV">5dp</dimen>
+
+	<dimen name="main_remain_title_text">12dp</dimen>
+	<dimen name="main_remain_time_text">15sp</dimen>
+	<dimen name="main_remain_subtime_text">12sp</dimen>
+
+	<!-- main item popup -->
+	<dimen name="main_popup_title_padding">5dp</dimen>
+
+	<dimen name="main_popup_switch_sizeH">40dp</dimen>
+	<dimen name="main_popup_switch_sizeV">20dp</dimen>
+	<dimen name="main_popup_switch_marginV">3dp</dimen>
+	<dimen name="main_popup_switch_marginR">20dp</dimen>
+
+	<dimen name="main_popup_scroll_sizeV">150dp</dimen>
+
+	<dimen name="main_popup_content_paddingV">5dp</dimen>
+	<dimen name="main_popup_content_distanceV">10dp</dimen>
+	<dimen name="main_popup_date_padding">10dp</dimen>
+	<dimen name="main_popup_split_marginH">5dp</dimen>
+	<dimen name="main_popup_times_paddingV">5dp</dimen>
+	<dimen name="main_popup_time_paddingV">3dp</dimen>
+	<dimen name="main_popup_buttons_paddingH">10dp</dimen>
+	<dimen name="main_popup_icon_size">35dp</dimen>
+	<dimen name="main_popup_button_paddingH">10dp</dimen>
+	<dimen name="main_popup_button_text_padding">2dp</dimen>
+
+	<dimen name="main_popup_title_text">20sp</dimen>
+	<dimen name="main_popup_switch_text">8dp</dimen>
+	<dimen name="main_popup_date_text">15sp</dimen>
+	<dimen name="main_popup_content_text">13sp</dimen>
+	<dimen name="main_popup_button_text">13sp</dimen>
+	<dimen name="main_popup_time_text">13sp</dimen>
+
+	<!-- popup window -->
+	<dimen name="popup_padding">10dp</dimen>
+
+	<dimen name="popup_content_padding">5dp</dimen>
+	<dimen name="popup_button_marginT">5dp</dimen>
+	<dimen name="popup_button_padding">5dp</dimen>
+
+	<dimen name="popup_content_text">15sp</dimen>
+	<dimen name="popup_button_text">15sp</dimen>
+
 </resources>
